--- a/data/petri_configs/phase2_config.json
+++ b/data/petri_configs/phase2_config.json
@@ -1,9 +1,9 @@
 {
-    "n_wafer": 48,
-    "n_wafer_route1": 24,
-    "n_wafer_route2": 24,
+    "n_wafer": 6,
+    "n_wafer_route1": 0,
+    "n_wafer_route2": 6,
     "c_time": 8,
-    "R_done": 100,
+    "R_done": 500,
     "R_finish": 3000,
     "R_scrap": 3000,
     "T_warn": 30,
@@ -13,6 +13,8 @@
     "D_Residual_time": 15,
     "P_Residual_time": 20,
     "c_release_violation": 0.1,
+    "enable_release_penalty_detection": false,
+    "enable_s5_availability_check": false,
     "T_transport": 5,
     "T_load": 5,
     "T_pm1_to_pm2": 5,
